--- a/app/src/main/res/layout/dialog_packagegoodsinfo_layout.xml
+++ b/app/src/main/res/layout/dialog_packagegoodsinfo_layout.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp">
 
