--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:overScrollMode="never"
-    android:scrollbars="none"
-    android:orientation="vertical">
+
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,134 +51,13 @@
                     android:layout_width="10dp"
                     android:layout_height="10dp"
                     android:layout_marginLeft="2dp"
-                    android:visibility="gone"
-                    android:src="@drawable/right_arrow" />
+                    android:src="@drawable/right_arrow"
+                    android:visibility="gone" />
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:background="@color/white"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/ll_yue"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tv_yue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="----"
-                        android:textColor="@color/grayblack"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="元"
-                        android:textColor="@color/grayblack"
-                        android:textSize="14dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/yue_icon" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="余额"
-                        android:textColor="@color/textblack"
-                        android:textSize="16dp" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <View
-                android:layout_width="1px"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/divideline" />
-
-            <LinearLayout
-                android:id="@+id/ll_jifen"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tv_jifen"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="----"
-                        android:textColor="@color/grayblack"
-                        android:textSize="18dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="分"
-                        android:textColor="@color/grayblack"
-                        android:textSize="14dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/jifen_icon" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="积分"
-                        android:textColor="@color/textblack"
-                        android:textSize="16dp" />
-                </LinearLayout>
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/ll_pingjia"
+            android:id="@+id/ll_yue"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="15dp"
@@ -197,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
-                android:text="我的评价"
+                android:text="余额"
                 android:textColor="@color/textblack"
                 android:textSize="16dp" />
 
@@ -214,7 +94,7 @@
             android:background="@color/divideline" />
 
         <LinearLayout
-            android:id="@+id/ll_shoucang"
+            android:id="@+id/ll_jifen"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/selector_white_gray"
@@ -226,14 +106,14 @@
             <ImageView
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:src="@drawable/shoucang_icon" />
+                android:src="@drawable/pingjia_icon" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
-                android:text="我的收藏"
+                android:text="积分"
                 android:textColor="@color/textblack"
                 android:textSize="16dp" />
 
@@ -244,15 +124,11 @@
                 android:src="@drawable/right_arrow" />
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/divideline" />
-
         <LinearLayout
             android:id="@+id/ll_address"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/selector_white_gray"
             android:clickable="true"
             android:gravity="center_vertical"
@@ -359,42 +235,6 @@
             android:background="@color/divideline" />
 
         <LinearLayout
-            android:id="@+id/ll_kefu"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@drawable/selector_white_gray"
-            android:clickable="true"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="15dp">
-
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:src="@drawable/kefu_icon" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1"
-                android:text="客服中心"
-                android:textColor="@color/textblack"
-                android:textSize="16dp" />
-
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/right_arrow" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/divideline" />
-
-        <LinearLayout
             android:id="@+id/ll_update"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -430,22 +270,39 @@
             android:layout_height="1px"
             android:background="@color/divideline" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@color/white"
+            android:padding="10dp"
             android:gravity="center"
-            android:text="客服电话:10109777"
-            android:textColor="@color/myyellow"
-            android:textSize="16dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="客服电话:"
+                android:textColor="@color/grayblack"
+                android:textSize="16dp" />
+
+            <TextView
+                android:id="@+id/tv_service_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="18137127017"
+                android:textColor="@color/myyellow"
+                android:textSize="16dp" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:textColor="@color/grayblack"
-            android:textSize="14dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
             android:gravity="center"
-            android:text="服务时间:9:00-23:00" />
+            android:text="服务时间:9:00-23:00"
+            android:textColor="@color/grayblack"
+            android:textSize="16dp" />
     </LinearLayout>
 </ScrollView>
