--- a/app/src/main/res/layout/activity_packagegoodsinfo_layout.xml
+++ b/app/src/main/res/layout/activity_packagegoodsinfo_layout.xml
@@ -170,7 +170,7 @@
                     android:orientation="horizontal">
 
                     <View
-                        android:layout_width="5dp"
+                        android:layout_width="@dimen/vertical_yellow_line_width"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:background="@color/home_verrical_line_yellow" />
@@ -207,7 +207,7 @@
                     android:orientation="horizontal">
 
                     <View
-                        android:layout_width="5dp"
+                        android:layout_width="@dimen/vertical_yellow_line_width"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:background="@color/home_verrical_line_yellow" />
