--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -183,14 +183,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:orientation="horizontal"
                 android:padding="10dp">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:text="备注"
                     android:textColor="@color/textblack"
                     android:textSize="16dp" />
@@ -198,24 +197,28 @@
                 <TextView
                     android:id="@+id/tv_remark"
                     android:layout_width="0dp"
-                    android:gravity="right|center_vertical"
                     android:layout_height="wrap_content"
-                    android:background="@null"
                     android:layout_marginRight="5dp"
-                    android:textColor="@color/grayblack"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:ellipsize="end"
+                    android:gravity="right|center_vertical"
+                    android:singleLine="true"
                     android:text="口味、偏好等要求"
-                    android:textSize="14dp"
-                    android:layout_weight="1" />
+                    android:textColor="@color/grayblack"
+                    android:textSize="14dp" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/right_arrow"/>
+                    android:src="@drawable/right_arrow" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:background="@color/divideline"
-                android:layout_height="1px"/>
+                android:layout_height="1px"
+                android:background="@color/divideline" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
