--- a/app/src/main/res/layout/activity_account_recharge_layout.xml
+++ b/app/src/main/res/layout/activity_account_recharge_layout.xml
@@ -2,71 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_bg"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_marginTop="20dp"
-        android:background="@color/divideline" />
-
-    <RelativeLayout
-        android:id="@+id/rl_yue"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/selector_white_gray">
-
-        <ImageView
-            android:id="@+id/iv_yue"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:scaleType="fitCenter"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/yue_icon" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_toRightOf="@id/iv_yue"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_yue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="余额支付"
-                android:textColor="@color/textblack"
-                android:textSize="16dp" />
-
-            <TextView
-                android:id="@+id/tv_yue_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_yue"
-                android:layout_marginTop="2dp"
-                android:text="余额支付,方便快捷"
-                android:textColor="@color/grayblack"
-                android:textSize="14dp" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/iv_rb_yue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/rb_bg_checked" />
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/divideline" />
+        android:layout_height="10dp"
+        android:background="@color/gray_bg" />
 
     <RelativeLayout
         android:id="@+id/rl_zfb"
@@ -78,10 +20,10 @@
             android:id="@+id/iv_zfb"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:scaleType="fitCenter"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/zfb" />
 
         <LinearLayout
@@ -103,7 +45,6 @@
                 android:id="@+id/tv_zfb_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_yue"
                 android:layout_marginTop="2dp"
                 android:text="推荐有支付宝账号的用户使用"
                 android:textColor="@color/grayblack"
@@ -135,10 +76,10 @@
             android:id="@+id/iv_weixin"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:scaleType="fitCenter"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/icon_wechat_pay" />
 
         <LinearLayout
@@ -160,7 +101,6 @@
                 android:id="@+id/tv_weixin_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_yue"
                 android:layout_marginTop="2dp"
                 android:text="推荐有微信账号的用户使用"
                 android:textColor="@color/grayblack"
@@ -179,18 +119,53 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/divideline" />
+        android:layout_height="10dp"
+        android:background="@color/gray_bg" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="金额"
+            android:textColor="@color/textblack"
+            android:textSize="16dp" />
+
+        <EditText
+            android:id="@+id/et_money"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:hint="请输入金额"
+            android:inputType="numberDecimal"
+            android:textColor="@color/textblack"
+            android:textSize="16dp" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/gray_bg"
+        android:gravity="center_vertical"
+        android:padding="15dp"
+        android:text="单日交易限额￥300元"
+        android:textColor="@color/grayblack" />
 
     <Button
-        android:id="@+id/btn_pay"
+        android:id="@+id/btn_ok"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_margin="15dp"
         android:background="@drawable/login_btn_enable"
+        android:gravity="center"
         android:text="确认支付"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16dp" />
 </LinearLayout>
